README: Fix 'mutt-ldap.py' -> 'mutt_ldap.py' typos
These are out of date after:

  commit d3879f6e4509c35f0bcb79e0e4eb99a1d767fd35
  Author: W. Trevor King <wking@tremily.us>
  Date:   Sun Jan 20 14:13:42 2013 -0500

    mutt_ldap.py: Rename with underscore for package import

--- a/README
+++ b/README
@@ -43,14 +43,14 @@ standard::
 
   $ python setup.py install
 
-or you can just copy ``mutt-ldap.py`` into to your ``PATH``.
+or you can just copy ``mutt_ldap.py`` into to your ``PATH``.
 
 Usage
 =====
 
 Add the following line to your ``~/.muttrc``::
 
-  set query_command = "mutt-ldap.py '%s'"
+  set query_command = "mutt_ldap.py '%s'"
 
 Search for addresses (from Mutt_) with ``^t``, optionally after typing
 part of the name.  Configure your connection by creating
@@ -60,7 +60,7 @@ part of the name.  Configure your connection by creating
   server = myserver.example.net
   basedn = ou=people,dc=example,dc=net
 
-See the ``CONFIG`` options in ``mutt-ldap.py`` for other available
+See the ``CONFIG`` options in ``mutt_ldap.py`` for other available
 settings.
 
 Licence
