--- a/README
+++ b/README
@@ -3,6 +3,46 @@ connects to LDAP_ databases using python-ldap_.  It can cache queries
 locally in case your LDAP server is slow or not always available,
 expiring cached queries after a configurable amount of time.
 
+Usage
+=====
+
+  usage: mutt_ldap [-h] [--version] [--config CONFIG] [--verbose]
+                  query [query ...]
+
+positional arguments:
+  query            Search query for the LDAP directory
+
+optional arguments:
+  --config CONFIG  Path to the configuration file
+
+If the ``xdg`` module supplied by PyXDG_ is not available, the default
+configuration path falls back on ``~/.config/mutt-ldap.cfg`` and the default
+cache path falls back on ``~/.cache/mutt-ldap.json``.
+
+To use in mutt, add the following line to your ``~/.muttrc``::
+
+  set query_command = "mutt_ldap.py '%s'"
+
+Search for addresses (from Mutt_) with ``^t``, optionally after typing
+part of the name.  Configure your connection by creating
+``$XDG_CONFIG_HOME/mutt-ldap.cfg`` containing something like::
+
+  [connection]
+  server = myserver.example.net
+  port   = 1389
+  basedn = ou=people,dc=example,dc=net
+  [auth]
+  user         = username
+  password-cmd = pass example
+
+The query cache (enabled by default) will be created at
+``$XDG_DATA_HOME/mutt-ldap.json``, unless overriden by an explicit
+``cache.path`` setting.
+
+See the ``CONFIG`` options in ``mutt_ldap.py`` for other available
+settings.  See the `XDG Base Directory Specification`_ for more
+details on configuration and cache file locations.  
+
 Installation
 ============
 
@@ -46,32 +86,6 @@ standard::
 
 or you can just copy ``mutt_ldap.py`` into to your ``PATH``.
 
-Usage
-=====
-
-Add the following line to your ``~/.muttrc``::
-
-  set query_command = "mutt_ldap.py '%s'"
-
-Search for addresses (from Mutt_) with ``^t``, optionally after typing
-part of the name.  Configure your connection by creating
-``$XDG_CONFIG_HOME/mutt-ldap.cfg`` containing something like::
-
-  [connection]
-  server = myserver.example.net
-  basedn = ou=people,dc=example,dc=net
-
-The query cache (enabled by default) will be created at
-``$XDG_DATA_HOME/mutt-ldap.json``, unless overriden by an explicit
-``cache.path`` setting.
-
-See the ``CONFIG`` options in ``mutt_ldap.py`` for other available
-settings.  See the `XDG Base Directory Specification`_ for more
-details on configuration and cache file locations.  If the ``xdg``
-module supplied by PyXDG_ is not available, the default configuration
-path falls back on ``~/.config/mutt-ldap.cfg`` and the default cache
-path falls back on ``~/.cache/mutt-ldap.json``.
-
 Licence
 =======
 
@@ -89,19 +103,36 @@ Related work
 `mutt_ldap_query`_ is a Perl script with a similar purpose.
 
 .. _external address query script:
-   http://www.mutt.org/doc/manual/manual-4.html#ss4.5
-.. _Mutt: http://www.mutt.org/
-.. _LDAP: http://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol
-.. _python-ldap: http://www.python-ldap.org/
-.. _Gentoo: http://www.gentoo.org/
-.. _layman: http://layman.sourceforge.net/
-.. _wtk overlay: http://blog.tremily.us/posts/Gentoo_overlay/
-.. _Debian: http://www.debian.org/
-.. _PyXDG: http://freedesktop.org/wiki/Software/pyxdg
-.. _Git: http://git-scm.com/
+   [www][0]
+.. _Mutt: [www][1]
+.. _LDAP: [en][2]
+.. _python-ldap: [www][3]
+.. _Gentoo: [www][4]
+.. _layman: [layman][5]
+.. _wtk overlay: [blog][6]
+.. _Debian: [www][7]
+.. _PyXDG: [freedesktop][8]
+.. _Git: [git-scm][9]
 .. _XDG Base Directory Specification:
-   http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html
-.. _GNU General Public License Version 3: http://www.gnu.org/licenses/gpl.html
-.. _GitHub: https://github.com/wking/mutt-ldap
-.. _GitHub issue tracker: https://github.com/wking/mutt-ldap/issues
+   [standards][10]
+.. _GNU General Public License Version 3: [www][11]
+.. _GitHub: [github][12]
+.. _GitHub issue tracker: [github][13]
 .. _mutt_ldap_query: ftp://ftp.mutt.org/pub/mutt/contrib/mutt_ldap_query.README
+
+## Links
+
+[0]: [www](http://www.mutt.org/doc/manual/manual-4.html#ss4.5)
+[1]: [www](http://www.mutt.org/)
+[2]: [en](http://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol)
+[3]: [www](http://www.python-ldap.org/)
+[4]: [www](http://www.gentoo.org/)
+[5]: [layman](http://layman.sourceforge.net/)
+[6]: [blog](http://blog.tremily.us/posts/Gentoo_overlay/)
+[7]: [www](http://www.debian.org/)
+[8]: [freedesktop](http://freedesktop.org/wiki/Software/pyxdg)
+[9]: [git-scm](http://git-scm.com/)
+[10]: [standards](http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html)
+[11]: [www](http://www.gnu.org/licenses/gpl.html)
+[12]: [github](https://github.com/wking/mutt-ldap)
+[13]: [github](https://github.com/wking/mutt-ldap/issues)
